k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: max-web
  labels:
    app: max-web
spec:
  selector:
    app: max-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
